[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/stars.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/block.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/main_game.gd" type="Script" id=4]
[ext_resource path="res://sprites/bg.png" type="Texture" id=5]
[ext_resource path="res://sprites/star.png" type="Texture" id=6]
[ext_resource path="res://sprites/red1.png" type="Texture" id=7]
[ext_resource path="res://sprites/red2.png" type="Texture" id=8]
[ext_resource path="res://sprites/red3.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "block.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 359, 612, 0, 0, 0, 0, 82, 615 )
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26, 34 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25, 0.5 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy/AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="main_game" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="stage_1" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="stage_1"]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 131071, 0, 0, 65536, 0, 0, 65542, 0, 0, 65568, 0, 0, 65569, 0, 0, 196607, 0, 0, 131072, 0, 0, 131078, 0, 0, 131104, 0, 0, 131105, 0, 0, 262143, 0, 0, 196608, 0, 0, 196641, 0, 0, 327679, 0, 0, 262144, 0, 0, 262177, 0, 0, 393215, 0, 0, 327680, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327713, 0, 0, 458751, 0, 0, 393216, 0, 0, 393222, 0, 0, 393223, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393249, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458773, 0, 0, 458774, 0, 0, 458784, 0, 0, 458785, 0, 0, 589823, 0, 0, 524288, 0, 0, 524299, 0, 0, 524300, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 655359, 0, 0, 589824, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0 )

[node name="list_star" type="Node2D" parent="stage_1"]

[node name="stars" parent="stage_1/list_star" instance=ExtResource( 1 )]

[node name="stars2" parent="stage_1/list_star" instance=ExtResource( 1 )]
position = Vector2( 1771, 323 )

[node name="stars3" parent="stage_1/list_star" instance=ExtResource( 1 )]
position = Vector2( 1031, 336 )

[node name="player" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" parent="player" index="2"]
smoothing_enabled = true

[node name="bg" type="CanvasLayer" parent="."]
layer = -100

[node name="Sprite" type="Sprite" parent="bg"]
texture = ExtResource( 5 )
centered = false

[node name="star_status" type="CanvasLayer" parent="."]

[node name="star1" type="Sprite" parent="star_status"]
visible = false
position = Vector2( 106, 108 )

[node name="Sprite" type="Sprite" parent="star_status/star1"]
texture = ExtResource( 6 )

[node name="star2" type="Sprite" parent="star_status"]
visible = false
position = Vector2( 170, 108 )

[node name="Sprite" type="Sprite" parent="star_status/star2"]
texture = ExtResource( 6 )

[node name="star3" type="Sprite" parent="star_status"]
visible = false
position = Vector2( 233, 108 )

[node name="Sprite" type="Sprite" parent="star_status/star3"]
texture = ExtResource( 6 )

[node name="path_enemy" type="Path2D" parent="."]
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="path_enemy"]
position = Vector2( 82.0001, 615 )
rotation = -2.70175
offset = 277.066

[node name="enemy" type="Node2D" parent="path_enemy/PathFollow2D"]
position = Vector2( -7.097, 8.92383 )
rotation = -3.13076

[node name="AnimatedSprite" type="AnimatedSprite" parent="path_enemy/PathFollow2D/enemy"]
frames = SubResource( 3 )
frame = 2
playing = true
flip_h = true

[node name="damage" type="Area2D" parent="path_enemy/PathFollow2D/enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="path_enemy/PathFollow2D/enemy/damage"]
position = Vector2( 4, 0 )
shape = SubResource( 4 )

[node name="kill" type="Area2D" parent="path_enemy/PathFollow2D/enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="path_enemy/PathFollow2D/enemy/kill"]
position = Vector2( 4, -35 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="path_enemy/PathFollow2D"]
autoplay = "walk"
anims/RESET = SubResource( 7 )
anims/walk = SubResource( 8 )

[connection signal="area_entered" from="player/Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="stage_1/list_star/stars"]
[editable path="stage_1/list_star/stars2"]
[editable path="player"]
